fixes for dark mode

--- a/style/tailwind.css
+++ b/style/tailwind.css
@@ -22,3 +22,6 @@
   .dark .dark\:border {
     border-width: 1px !important;
 }
+.dark .dark\:bg-transparent {
+    background-color: transparent !important;
+}
